Try fix for platform issues

--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -29,7 +29,7 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           push: true
-          platforms: linux/amd64,linux/arm/v8
+          platforms: linux/amd64,linux/arm64
           tags: jakepricedev/docker-caddy-namecheap:2.5.1-alpine
 
       - name: Docker Hub Description
